# lightwrite

./: .gitignore  CMakeLists.txt  README.md
include/: app.hpp  buffer.h  buffer.hpp  edit_layer.hpp  file_manager_layer.hpp  filemanager.h  filemanager.hpp  font.h  keybinds.h  keybinds.hpp  line_selector.hpp  logger.h  logger.hpp  utilities.hpp
libs/: MonoLisaRegular.cpp  MonoLisaRegular.h  base64pp.cpp  base64pp.hpp  portable_filedialogs.hpp
src/: app.cpp  buffer.c  buffer.cpp  buffer.h  buffer_.cpp  edit_layer.cpp  file_manager_layer.cpp  filemanager.c  filemanager.cpp  filemanager.h  font.c  font.cpp  font.h  keybinds.c  keybinds.cpp  keybinds.h  lassert.c  lassert.h  line_selector.cpp  logger.c  logger.cpp  logger.h  main.cpp  utilities.cpp
tests/: buffer_tests.cpp  enc_tests.cpp  example_test.cpp  filemanager_tests.cpp
